# ssh_client

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build-deb.yml
cmake/: ssh-clientConfig.cmake.in
completion/: _ssh-client
deb/: CMakeLists.txt
install/: CMakeLists.txt
options/: CMakeLists.txt
src/: main.cpp  ssh_client.cpp  ssh_client.hpp
